# Imaging-Art-beyond-RGB

./: .gitignore  .gitmodules  .prettierrc  LICENSE  README.md  beyond-rgb-backend.vcxproj  codecov.yml  d  library.cpp  library.h  main.cpp  package-lock.json  package.json  pos.txt  postcss.config.js  requirements.txt  rollup.config.js  run_tests.bat  run_tests.sh  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js
backend/: .clang-format  .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ArchitecutreTest.sln  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.MD  Makefile  README.md  UpgradeLog.htm  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  apt-dependencies.txt  beyond-rgb-backend.vcxproj  beyond-rgb-backend.vcxproj.filters  cmake_install.cmake  config_depends.bat  config_environ.sh  dependencies.txt  linux_build.sh  linux_config_environment.sh  linux_debug.sh  linux_release.sh  log_2024-10-01T15-33-19.txt  log_2024-10-03T17-56-48.txt  log_2024-10-04T00-45-11.txt  log_2024-10-08T01-30-32.txt  log_2024-10-08T02-23-10.txt  log_2024-10-08T16-35-28.txt  macOS_build.sh  macOS_release.sh  osx_build.sh  osx_config_environment.sh  osx_debug.sh  osx_release.sh  requirements.txt  run_coverage.sh  run_test.sh  unix_build.sh  (+12 more)
backend/cmake/: clang-format.cmake
backend/cmake/modules/: FindIccDEV.cmake  FindiccDEV.cmake  iccDEVConfig.cmake
backend/data/: APT_lab.csv  APT_reflectance.csv  APT_xyz.csv  CCSG_lab.csv  CCSG_reflectance.csv  CCSG_xyz.csv  CC_lab.csv  CC_xyz.csv  NGT_lab.csv  NGT_xyz.csv
backend/doc/: sequence_diagram.puml
backend/include/: btrgb.hpp  version.h  version.h.in
backend/include/backend_process/: ColorManagedImage.hpp  HalfSizePreview.hpp  OpenQualiaRequest.hpp  QRScanRequest.hpp  ReportRequest.hpp  SpectralPicker.hpp  SpectralPickerMeasured.hpp  ThumbnailLoader.hpp  backend_process.hpp  pipeline.hpp
backend/include/image_processing/: BitDepthScaler.h  ChannelSelector.h  ColorManagedCalibrator.h  CompositComponent.h  FlatFieldor.h  ImageCalibrator.h  ImageProcessor.h  ImageReader.h  ImgProcessingComponent.h  LeafComponent.h  NoiseReduction.h  PixelRegestor.h  PreProcessor.h  ResultsProcessor.h  SpectralCalibrator.h  Verification.h
backend/include/image_util/: ArtObject.hpp  BitDepthFinder.hpp  ColorProfiles.hpp  ColorTarget.hpp  Image.hpp  ImageLoader.hpp
backend/include/reference_data/: color_patch.hpp  illuminants.hpp  oqm_parser.hpp  ref_data.hpp  ref_data_array.hpp  ref_data_defines.hpp  standard_observer.hpp  white_points.hpp
backend/include/server/: communication_obj.hpp  communicator.hpp  globals_singleton.hpp  process_manager.hpp  request_server.hpp
backend/include/utils/: calibration_util.hpp  cmd_arg_manager.hpp  color_conversions.hpp  csv_parser.hpp  general_utils.hpp  http_client.hpp  json.hpp  jsonafiable.hpp  matrix_utils.hpp  qr_detector.hpp  resource_paths.hpp  time_tracker.hpp
backend/res/: calibration_input_matrix.csv
backend/res/ref_data/: APT_Reflectance_Data.csv  CCSG_Reflectance_Data.csv  CC_Classic_Reflectance_Data.csv  Illuminants.csv  NGT_Reflectance_Data.csv  Standard_Observer_1931.csv  Standard_Observer_1964.csv  test.csv
backend/src/: ArtObject.cpp  ArtObject.hpp  BeyondRGB.py  NGT_spectral_reflectance  api.py  btrgb.hpp  btrgb.py  calibration.py  constants.py  ex1.cpp  exceptions.py  io.py  lab_refs.py  main.cpp  main.py  packet.py  parser.py  pipeline.cpp  pipeline.h  pipeline.py  pipelines.py  preprocessing.py  rendering.py  rgbio.py  runner.py  spectral_equation.py  spectral_reflectance.py  standard_observer_1964_reflectance_data.csv  target.py  target_selector.py  test_tui.py  tui.py  util.py  verification.py  version.h.in  viewer.py
backend/src/ImageUtil/: ArtObject.cpp  ArtObject.hpp  BitDepthFinder.cpp  BitDepthFinder.hpp  ColorProfiles.cpp  ColorProfiles.hpp  ColorTarget.cpp  ColorTarget.hpp  Image.cpp  Image.hpp
backend/src/backend_process/: ColorManagedImage.cpp  ColorManagedImage.hpp  HalfSizePreview.cpp  HalfSizePreview.hpp  OpenQualiaRequest.cpp  QRScanRequest.cpp  ReportRequest.cpp  ReportRequest.hpp  SpectralPicker.cpp  SpectralPicker.hpp  SpectralPickerMeasured.cpp  SpectralPickerMeasured.hpp  Thumbnail.hpp  ThumbnailLoader.cpp  ThumbnailLoader.hpp  Thumnail.cpp  ThumnailLoader.cpp  ViewTiff.cpp  ViewTiff.hpp  backend_process.cpp  backend_process.hpp  pipeline.cpp  pipeline.h  pipeline.hpp
backend/src/calibration/: calibration.py  packet.py  pipeline.py  preprocessing.py  rendering.py  spectral_reflectance.py  verification.py
backend/src/compat/: avx2_compat.c  avx2_compat.cpp
backend/src/data/: CC_reflectance.csv  NGT_lab.csv  NGT_spectral_reflectance.csv
backend/src/image_processing/: BitDepthScaler.cpp  ChannelSelector.cpp  ColorManagedCalibrator.cpp  FlatFieldor.cpp  ImageCalibrator.cpp  ImageProcessor.cpp  ImageReader.cpp  NoiseReduction.cpp  PixelRegestor.cpp  PreProcessor.cpp  ResultsProcessor.cpp  SpectralCalibrator.cpp  Verification.cpp  pipeline.h
backend/src/image_util/: ArtObject.cpp  ArtObject.hpp  BitDepthFinder.cpp  ColorProfiles.cpp  ColorTarget.cpp  Image.cpp  ImageLoader.cpp  write_tiff.cpp  write_tiff.hpp
backend/src/reference_data/: color_patch.cpp  color_patch.hpp  csv_parser.cpp  csv_parser.hpp  data_manager.cpp  data_manager.hpp  illuminants.cpp  illuminants.hpp  oqm_parser.cpp  ref_data.cpp  ref_data.hpp  ref_data_array.cpp  ref_data_array.hpp  ref_data_defines.hpp  standard_observer.cpp  standard_observer.hpp  white_points.cpp  white_points.hpp
backend/src/server/: communication_obj.cpp  communicator.cpp  communicator.hpp  comunication_obj.cpp  comunication_obj.h  comunication_obj.hpp  globals_siglton.hpp  globals_singleton.cpp  globals_singlton.cpp  process_manager.cpp  process_manager.hpp  request_server.cpp  request_server.hpp
backend/src/tui/: auto_sort.py  file_selector.py  file_sorter.py  outpath_selector.py  target_selector.py  target_type_selector.py  tui.py  welcome.py  (+1 more)
backend/test/: nikon_raw_test.html  nikon_raw_test.js  smoke_test.bat  smoke_test.sh  thumbnail_binary_image.html  thumbnail_test.html  unit_utils.cpp
(+465 files in other folders)
